# elx

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  example_rust_stacktrace.txt  format.sh  notes.md  notes.txt  scratch  scratch.c  xmake.lua
els/: example.els
src/: allocator.c  allocator.h  analyzer.c  analyzer.h  arena.c  arena.h  array.c  array.h  fmt.c  fmt.h  hash.c  hash.h  hashtable.c  hashtable.h  lexer.c  lexer.h  logger.c  logger.h  main.c  modprim.h  modsize.h  opts.h  panic.c  panic.h  parser.c  parser.h  parser_utils.c  parser_utils.h  str.c  str.h  str_utils.c  str_utils.h  strview.c  strview.h  symbol.h  todo.c  todo.h  token.c  token.h  token_kind.c  (+12 more)
src/analyzer/: analyzer.c  analyzer.h
src/core/: allocator.c  allocator.h  array.c  array.h  fmt.c  fmt.h  hash.c  hash.h  hashtable.c  hashtable.h  list.c  list.h  logger.c  logger.h  modfloat.h  modint.h  panic.c  panic.h  str.c  str.h  str_utils.c  str_utils.h  strview.c  strview.h  symbol.h  todo.c  todo.h  vector.c  vector.h  xalloc.c  xalloc.h
src/lexer/: lexer.c  lexer.h
src/parser/: parser.c  parser.h  parser_utils.c  parser_utils.h
src/token/: token.c  token.h  token_kind.c  token_kind.h  token_tables.c  token_tables.h  token_utils.c
tests/: example-0.1.0.els  example.els  test.els  test_allocator.c  test_example.c  test_hashtable.c  test_vector.c
